correction de quelques commentaires

--- a/notebooks/1 - Raw Data Integration Notebook.ipynb
+++ b/notebooks/1 - Raw Data Integration Notebook.ipynb
@@ -18,20 +18,9 @@
    "source": [
     "from pyspark.sql import SparkSession\n",
     "\n",
-    "# Configuration Spark avec Iceberg et MinIO\n",
-    "from pyspark.sql import SparkSession\n",
-    "from pyspark import SparkConf\n",
-    "import os\n",
-    "\n",
     "# -----------------------------------------------------\n",
-    "# 1. Configuration MinIO + Spark S3A + Iceberg REST Catalog\n",
+    "# 1. Démarrage de la session Spark\n",
     "# -----------------------------------------------------\n",
-    "\n",
-    "# Credentials MinIO\n",
-    "os.environ[\"AWS_ACCESS_KEY_ID\"] = \"minio\"\n",
-    "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = \"minio123\"\n",
-    "os.environ[\"AWS_REGION\"] = \"eu-west-1\"\n",
-    "\n",
     "spark = SparkSession.builder.appName(\"IcebergNotebook\").getOrCreate()\n",
     "spark.sparkContext.setLogLevel(\"ERROR\")\n",
     "print(\"Spark session initialisée avec Iceberg et MinIO.\")"
