--- a/notebooks/2 - Silver Data Mapping Notebook.ipynb
+++ b/notebooks/2 - Silver Data Mapping Notebook.ipynb
@@ -23,15 +23,10 @@
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
-    "import os\n",
-    "from pyspark import SparkConf\n",
     "\n",
-    "# Credentials MinIO\n",
-    "os.environ[\"AWS_ACCESS_KEY_ID\"] = \"minio\"\n",
-    "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = \"minio123\"\n",
-    "os.environ[\"AWS_REGION\"] = \"eu-west-1\"\n",
-    "\n",
-    "# Initialisation Spark \n",
+    "# -----------------------------------------------------\n",
+    "# 1. Démarrage de la session Spark\n",
+    "# -----------------------------------------------------\n",
     "\n",
     "spark = SparkSession.builder.appName(\"Iceberg Raw to Warahouse Data Loader\").getOrCreate()\n",
     "spark.sparkContext.setLogLevel(\"ERROR\")\n",
@@ -49,7 +44,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Mapping des tables raw -> silver\n",
+    "# -----------------------------------------------------\n",
+    "# 2. Mapping des fichiers bruts vers les tables Silver\n",
+    "# -----------------------------------------------------\n",
+    "\n",
     "file_table_map = {\n",
     "    \"lakehouse.raw.drivers\": \"lakehouse.silver.dim_drivers\",\n",
     "    \"lakehouse.raw.trucks\": \"lakehouse.silver.dim_trucks\",\n",
@@ -75,7 +73,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Boucle générique pour créer ou insérer dans les tables silver\n",
+    "# -----------------------------------------------------\n",
+    "# 3. Création et insertion dans les tables Silver\n",
+    "# -----------------------------------------------------\n",
+    "\n",
     "for raw_table, silver_table in file_table_map.items():\n",
     "    print(f\"➡️ Traitement: {raw_table} -> {silver_table}\")\n",
     "\n",
