--- a/notebooks/3 - Gold Analytics Notebook.ipynb
+++ b/notebooks/3 - Gold Analytics Notebook.ipynb
@@ -17,17 +17,10 @@
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
-    "from pyspark.sql import DataFrame\n",
     "\n",
-    "# Configuration Spark avec Iceberg et MinIO\n",
-    "from pyspark.sql import SparkSession\n",
-    "from pyspark import SparkConf\n",
-    "import os\n",
-    "\n",
-    "# Credentials MinIO\n",
-    "os.environ[\"AWS_ACCESS_KEY_ID\"] = \"minio\"\n",
-    "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = \"minio123\"\n",
-    "os.environ[\"AWS_REGION\"] = \"eu-west-1\"\n",
+    "# -----------------------------------------------------\n",
+    "# 1. Démarrage de la session Spark\n",
+    "# -----------------------------------------------------\n",
     "\n",
     "spark = SparkSession.builder.appName(\"IcebergNotebook\").getOrCreate()\n",
     "spark.sparkContext.setLogLevel(\"ERROR\")\n",
