--- a/notebooks/4 - Clean Iceberg Tables.ipynb
+++ b/notebooks/4 - Clean Iceberg Tables.ipynb
@@ -18,15 +18,9 @@
    "source": [
     "from pyspark.sql import SparkSession\n",
     "\n",
-    "# Configuration Spark avec Iceberg et MinIO\n",
-    "from pyspark.sql import SparkSession\n",
-    "from pyspark import SparkConf\n",
-    "import os\n",
-    "\n",
     "# -----------------------------------------------------\n",
-    "# 1. Configuration MinIO + Spark S3A + Iceberg REST Catalog\n",
+    "# 1. Démarrage de la session Spark\n",
     "# -----------------------------------------------------\n",
-    "\n",
     "\n",
     "spark = SparkSession.builder.appName(\"Cleaning Training Data\").getOrCreate()\n",
     "spark.sparkContext.setLogLevel(\"ERROR\")\n",
