--- a/notebooks/SparkSQL.ipynb
+++ b/notebooks/SparkSQL.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "395aaba3-e262-4e29-8285-ee9d04be99db",
    "metadata": {},
    "outputs": [
@@ -38,29 +38,16 @@
     "from pyspark import SparkConf\n",
     "import os\n",
     "\n",
-    "# Credentials MinIO\n",
-    "os.environ[\"AWS_ACCESS_KEY_ID\"] = \"minio\"\n",
-    "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = \"minio123\"\n",
-    "os.environ[\"AWS_REGION\"] = \"eu-west-1\"\n",
+    "spark = SparkSession.builder.appName(\"IcebergNotebook\").getOrCreate()\n",
+    "spark.sparkContext.setLogLevel(\"ERROR\")\n",
     "\n",
-    "conf = (\n",
-    "    SparkConf()\n",
-    "    .set(\"spark.sql.extensions\", \"org.apache.iceberg.spark.extensions.IcebergSparkSessionExtensions\")\n",
-    "    .set(\"spark.sql.catalog.warehouse\", \"org.apache.iceberg.spark.SparkCatalog\")\n",
-    "    .set(\"spark.sql.catalog.warehouse.type\", \"rest\")\n",
-    "    .set(\"spark.sql.catalog.warehouse.uri\", \"http://rest:8181/\")  # nom du service REST\n",
-    "    .set(\"spark.sql.catalog.warehouse.io-impl\", \"org.apache.iceberg.aws.s3.S3FileIO\")\n",
-    "    .set(\"spark.sql.catalog.warehouse.s3.endpoint\", \"http://minio:9000\")  # nom du service MinIO\n",
-    "    .set(\"spark.sql.catalog.warehouse.warehouse\", \"s3://iceberg-lakehouse/wh\")  # bucket déjà créé\n",
-    "    .set(\"spark.hadoop.fs.s3a.path.style.access\", \"true\")  # nécessaire pour MinIO\n",
-    ")\n",
-    "spark = SparkSession.builder.config(conf=conf).appName(\"IcebergNotebook\").getOrCreate()\n",
-    "spark.sparkContext.setLogLevel(\"ERROR\")"
+    "spark.sql('CREATE NAMESPACE IF NOT EXISTS lakehouse.nyc').show()\n",
+    "print(f\"Namespace Iceberg créée : nyc\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d59f3b91",
    "metadata": {},
    "outputs": [
@@ -83,12 +70,12 @@
     "])\n",
     "\n",
     "df = spark.createDataFrame([], schema)\n",
-    "df.writeTo(\"warehouse.nyc.taxis\").createOrReplace()"
+    "df.writeTo(\"lakehouse.nyc.taxis\").createOrReplace()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "32cb2742",
    "metadata": {},
    "outputs": [
@@ -101,7 +88,7 @@
     }
    ],
    "source": [
-    "schema = spark.table(\"warehouse.nyc.taxis\").schema\n",
+    "schema = spark.table(\"lakehouse.nyc.taxis\").schema\n",
     "data = [\n",
     "    (1, 1000371, 1.8, 15.32, \"N\"),\n",
     "    (2, 1000372, 2.5, 22.15, \"N\"),\n",
@@ -109,12 +96,12 @@
     "    (1, 1000374, 8.4, 42.13, \"Y\")\n",
     "  ]\n",
     "df = spark.createDataFrame(data, schema)\n",
-    "df.writeTo(\"warehouse.nyc.taxis\").append()"
+    "df.writeTo(\"lakehouse.nyc.taxis\").append()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "c9514498",
    "metadata": {},
    "outputs": [
@@ -142,12 +129,12 @@
     }
    ],
    "source": [
-    "df = spark.table(\"warehouse.nyc.taxis\").show()"
+    "df = spark.table(\"lakehouse.nyc.taxis\").show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "186f9d01",
    "metadata": {},
    "outputs": [
@@ -169,7 +156,7 @@
     }
    ],
    "source": [
-    "spark.sql(\"SHOW TBLPROPERTIES warehouse.nyc.taxis;\").show()\n"
+    "spark.sql(\"SHOW TBLPROPERTIES lakehouse.nyc.taxis;\").show()\n"
    ]
   }
  ],
