--- a/notebooks/3 - Gold Analytics Notebook.ipynb
+++ b/notebooks/3 - Gold Analytics Notebook.ipynb
@@ -217,7 +217,7 @@
     "        l.load_id,\n",
     "        l.customer_id,\n",
     "        c.customer_name,\n",
-    "        l.booking_date,\n",
+    "        l.load_date,\n",
     "        l.revenue,\n",
     "        t.actual_distance_miles,\n",
     "        t.fuel_gallons_used,\n",
@@ -616,7 +616,7 @@
     "\n",
     "# Rafraîchir d’autres tables si nécessaire\n",
     "spark.sql(\"REFRESH TABLE lakehouse.gold.route_performance\")\n",
-    "print(\"✅ Table 'facility_geostats' route_performance.\")\n"
+    "print(\"✅ Table 'route_performance' rafraîchie.\")\n"
    ]
   },
   {
