--- a/notebooks/1 - Raw Data Integration Notebook.ipynb
+++ b/notebooks/1 - Raw Data Integration Notebook.ipynb
@@ -89,7 +89,7 @@
     "\n",
     "    # Lecture Spark\n",
     "    if filename.endswith(\".csv\"):\n",
-    "        df = spark.read.option(\"header\", \"true\").options(\"inferSchema\" , \"true\").csv(file_path)\n",
+    "        df = spark.read.option(\"header\", \"true\").option(\"inferSchema\" , \"true\").csv(file_path)\n",
     "    else:\n",
     "        df = spark.read.parquet(file_path)\n",
     "\n",
