rework sur un nouveau use, optimisation de la gestion des catalogues, exemple de pipeline avec GreatExpectations

--- a/notebooks/logistic-usecase/4 - Clean Iceberg Tables.ipynb
+++ b/notebooks/logistic-usecase/4 - Clean Iceberg Tables.ipynb
@@ -63,14 +63,14 @@
     "for t in tables:\n",
     "    table_name = t.tableName\n",
     "    print(f\"Suppression de la table: {table_name}\")\n",
-    "    spark.sql(f\"DROP TABLE IF EXISTS iceberg.{namespace}.{table_name}\")\n",
+    "    spark.sql(f\"DROP TABLE IF EXISTS iceblakehouseerg.{namespace}.{table_name}\")\n",
     "\n",
     "print(\"✅ Toutes les tables ont été supprimées.\")\n",
     "\n",
     "# ----------------------------\n",
     "# 5️⃣ Vérification\n",
     "# ----------------------------\n",
-    "remaining_tables = spark.sql(f\"SHOW TABLES IN iceberg.{namespace}\").collect()\n",
+    "remaining_tables = spark.sql(f\"SHOW TABLES IN lakehouse.{namespace}\").collect()\n",
     "if not remaining_tables:\n",
     "    print(\"Aucune table restante dans le namespace.\")\n",
     "else:\n",
